--- a/src/main/resources/static/framework/decluna/decluna.css
+++ b/src/main/resources/static/framework/decluna/decluna.css
@@ -40,7 +40,7 @@ body {
 	font-weight: bold;
 }
 .cursor_hover:hover {
-	cursor: url(../../image/cursor/transparent_blue/Hand.cur), auto;
+	cursor: url(../../image/cursor/transparent_blue/Hand.cur), auto !important;
 }
 
 .cursor_input {
@@ -48,11 +48,11 @@ body {
 }
 
 .cursor_input:focus {
-	color: lightsalmon;
+	color: lightsalmon !important;
 }
 
 .cursor_input:hover {
-	cursor: url(../../image/cursor/transparent_blue/IBeam.cur), auto;
+	cursor: url(../../image/cursor/transparent_blue/IBeam.cur), auto !important;
 }
 /*
 .language .dropdown-menu {
@@ -96,6 +96,9 @@ body {
 	background-color: transparent !important;
 	border: none !important;
 	box-shadow: 0px 1px 1px white !important;
+	font-weight: bold !important;
+}
+.transparentElement:not(input){
 	color: lightgray !important;
 }
 
